[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passwordforge"
version = "1.0.0"
description = "Generador de wordlists personalizadas con constraints flexibles"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Shadow-King-Cyber", email = "Shadow-King-Cyber@users.noreply.github.com"}
]
keywords = ["password", "wordlist", "security", "bruteforce", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
passwordforge = "passwordforge.cli:main"

[tool.setuptools.packages.find]
include = ["passwordforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
